--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://glitch.com/favicon.ico" />
 
+     <!--page title-->
     <title>Angel's Light and Sound Memory Game</title>
 
     <!--webpage's stylesheet-->
@@ -17,11 +18,11 @@
     <script src="/script.js" defer></script>
   </head>
   <body>
-    <!--main header (h1) displays name of game-->
+    <!--main header (h1) displays name of the game-->
     <h1>
       Angel's Light and Sound Memory Game
     </h1>
-    <!--main paragraph (p) displays description of game-->
+    <!--main paragraph (p) displays description of the game-->
     <p>
       I'll play a key. You'll repeat after me. 
       Each round is a little faster.
